typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames13_ES6.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            21,
        ),
        hi: BytePos(
            22,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames13_ES6.ts:2:5
  |
2 | var s: string;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            37,
        ),
        hi: BytePos(
            38,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames13_ES6.ts:3:5
  |
3 | var n: number;
  |     ^

